more additions changes

--- a/faculty/index.html
+++ b/faculty/index.html
@@ -316,6 +316,108 @@
         </div>
     </section>
 
+    <!-- Graduate Student Mentors -->
+    <section class="py-16 bg-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Graduate Student Mentors</h2>
+                <p class="text-xl text-gray-700 max-w-3xl mx-auto">
+                    Dedicated graduate students who provide additional mentorship and support for REU participants
+                </p>
+            </div>
+            
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
+                
+                <!-- Graduate Student Mentor 1 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow border-2 border-gray-200">
+                    <div class="w-full h-64 bg-gray-300 flex items-center justify-center">
+                        <div class="text-center">
+                            <i class="fas fa-user-graduate text-6xl text-gray-500 mb-2"></i>
+                            <p class="text-gray-500 font-medium">Photo Coming Soon</p>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Graduate Student Mentor 1</h3>
+                        <p class="text-fiu-gold font-semibold mb-3">Ph.D. Student, School of Computing and Information Sciences</p>
+                        <p class="text-gray-700 mb-4">
+                            Placeholder for graduate student mentor information. This section will be updated with detailed biographical information, research interests, and contact details.
+                        </p>
+                        <div class="mb-4">
+                            <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 1</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 2</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 3</span>
+                            </div>
+                        </div>
+                        <div class="flex items-center space-x-3 text-gray-400">
+                            <i class="fas fa-envelope"></i>
+                            <i class="fas fa-globe"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Graduate Student Mentor 2 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow border-2 border-gray-200">
+                    <div class="w-full h-64 bg-gray-300 flex items-center justify-center">
+                        <div class="text-center">
+                            <i class="fas fa-user-graduate text-6xl text-gray-500 mb-2"></i>
+                            <p class="text-gray-500 font-medium">Photo Coming Soon</p>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Graduate Student Mentor 2</h3>
+                        <p class="text-fiu-gold font-semibold mb-3">Ph.D. Student, School of Computing and Information Sciences</p>
+                        <p class="text-gray-700 mb-4">
+                            Placeholder for graduate student mentor information. This section will be updated with detailed biographical information, research interests, and contact details.
+                        </p>
+                        <div class="mb-4">
+                            <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 1</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 2</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 3</span>
+                            </div>
+                        </div>
+                        <div class="flex items-center space-x-3 text-gray-400">
+                            <i class="fas fa-envelope"></i>
+                            <i class="fas fa-globe"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Graduate Student Mentor 3 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow border-2 border-gray-200">
+                    <div class="w-full h-64 bg-gray-300 flex items-center justify-center">
+                        <div class="text-center">
+                            <i class="fas fa-user-graduate text-6xl text-gray-500 mb-2"></i>
+                            <p class="text-gray-500 font-medium">Photo Coming Soon</p>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Graduate Student Mentor 3</h3>
+                        <p class="text-fiu-gold font-semibold mb-3">Ph.D. Student, School of Computing and Information Sciences</p>
+                        <p class="text-gray-700 mb-4">
+                            Placeholder for graduate student mentor information. This section will be updated with detailed biographical information, research interests, and contact details.
+                        </p>
+                        <div class="mb-4">
+                            <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 1</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 2</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 3</span>
+                            </div>
+                        </div>
+                        <div class="flex items-center space-x-3 text-gray-400">
+                            <i class="fas fa-envelope"></i>
+                            <i class="fas fa-globe"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Previous Faculty -->
     <section class="py-16 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
