--- a/faq/index.html
+++ b/faq/index.html
@@ -114,7 +114,7 @@
                         </button>
                         <div id="faq-2" class="faq-content hidden px-6 pb-6">
                             <p class="text-gray-700">
-                                January 15, 2025, 11:59 PM EST.
+                                April 16, 2025, 11:59 PM EST.
                             </p>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         </button>
                         <div id="faq-3" class="faq-content hidden px-6 pb-6">
                             <p class="text-gray-700">
-                                Very competitive—200–300 applicants for 10–12 spots. Selection is based on academics, research interest, and STEM engagement.
+                                Very competitive—400–600 applicants for 10–12 spots. Selection is based on academics, research interest, and STEM engagement.
                             </p>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                         </button>
                         <div id="faq-5" class="faq-content hidden px-6 pb-6">
                             <p class="text-gray-700">
-                                10 weeks (June 3 – August 9, 2025), 40 hours/week with seminars and professional development.
+                                10 weeks (June 22 – August 1, 2025), 40 hours/week with workshops and professional development.
                             </p>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                         </button>
                         <div id="faq-7" class="faq-content hidden px-6 pb-6">
                             <p class="text-gray-700">
-                                Primarily Python; also C++, MATLAB, Java. Beginners are welcome.
+                                Python; also C++, MATLAB, Java. Beginners are welcome.
                             </p>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                         </button>
                         <div id="faq-10" class="faq-content hidden px-6 pb-6">
                             <p class="text-gray-700">
-                                Yes. A full meal plan (breakfast, lunch, dinner) at FIU dining halls is provided.
+                                A full meal plan (breakfast, lunch, dinner) at FIU dining halls is an available option.
                             </p>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                         </button>
                         <div id="faq-11" class="faq-content hidden px-6 pb-6">
                             <p class="text-gray-700">
-                                Up to $500 in travel support. Most students fly to Miami International Airport (MIA). Shuttles provided.
+                                Up to $450 in travel support. Most students fly to Miami International Airport (MIA). Shuttles provided.
                             </p>
                         </div>
                     </div>
@@ -248,7 +248,7 @@
                         </button>
                         <div id="faq-12" class="faq-content hidden px-6 pb-6">
                             <p class="text-gray-700">
-                                Summer clothes, laptop, bedding, toiletries, medications, and business attire.
+                                Summer clothes, laptop, bedding, toiletries, medications, and business attire (Check list will be provided).
                             </p>
                         </div>
                     </div>
