more more additions changes

--- a/faculty/index.html
+++ b/faculty/index.html
@@ -337,17 +337,19 @@
                         </div>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Graduate Student Mentor 1</h3>
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Luis Alberto Lago Enamorado</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Ph.D. Student, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Placeholder for graduate student mentor information. This section will be updated with detailed biographical information, research interests, and contact details.
-                        </p>
+                            Luis Alberto Lago Enamorado is affiliated with the School of Information and Electronics at the Beijing Institute of Technology in China. 
+                            His research focuses on advanced wireless communication systems, including pilot contamination mitigation in massive MIMO networks and human body communication channels. 
+                            He has co-authored publications in top-tier IEEE conferences and journals such as IEEE Transactions on Vehicular Technology. 
+                            Dr. Lago Enamorado's work explores novel signal processing techniques for enhancing communication efficiency and reliability in future wireless systems.                        </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 1</span>
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 2</span>
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 3</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Massive MIMO Systems</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Pilot Decontamination Techniques</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Human Body Communication Channels</span>
                             </div>
                         </div>
                         <div class="flex items-center space-x-3 text-gray-400">
@@ -366,17 +368,21 @@
                         </div>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Graduate Student Mentor 2</h3>
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Alex Pissinou Makki</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Ph.D. Student, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Placeholder for graduate student mentor information. This section will be updated with detailed biographical information, research interests, and contact details.
+                            Alex Pissinou Makki holds a B.S. in Electrical Engineering and Computer Science from UC Berkeley and an M.S. in Computer Science from the University of Illinois at Urbana-Champaign. 
+                            His research focuses on the intersection of machine learning and cybersecurity, including adversarial models, deep learning, and federated learning. 
+                            His work has been published in peer-reviewed venues and reflects a strong interest in information theory, IoT, and data science. 
+                            In 2018, he received an Honorable Mention for “Outstanding Undergraduate Researcher” by the CRA. 
+                            He is a member of Tau Beta Pi and Sigma Alpha Pi and actively mentors students for tech-driven social impact.                        
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 1</span>
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 2</span>
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 3</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Machine Learning & Cybersecurity</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Federated & Adversarial Learning</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">IoT and Information Theory</span>
                             </div>
                         </div>
                         <div class="flex items-center space-x-3 text-gray-400">
@@ -395,17 +401,20 @@
                         </div>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Graduate Student Mentor 3</h3>
+                        <h3 class="text-xl font-bold text-fiu-navy mb-2">Moreno-Garcia, Juan</h3>
                         <p class="text-fiu-gold font-semibold mb-3">Ph.D. Student, School of Computing and Information Sciences</p>
                         <p class="text-gray-700 mb-4">
-                            Placeholder for graduate student mentor information. This section will be updated with detailed biographical information, research interests, and contact details.
+                            Moreno-Garcia, Juan is a Ph.D. student in the School of Computing and Information Sciences at Florida International University. 
+                            His research interests include machine learning, cybersecurity, and privacy. 
+                            He is a member of the Cybersecurity and Privacy Research (CaSPR) Lab and the School of Computing and Information Sciences. 
+                            He is also a member of the IEEE and the ACM.                        
                         </p>
                         <div class="mb-4">
                             <h4 class="font-semibold text-fiu-navy mb-2">Research Interests:</h4>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 1</span>
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 2</span>
-                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Research Area 3</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Machine Learning</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Cybersecurity</span>
+                                <span class="bg-gray-300 text-gray-600 px-2 py-1 rounded text-sm">Privacy</span>
                             </div>
                         </div>
                         <div class="flex items-center space-x-3 text-gray-400">
