--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </p>
                     <ul class="text-lg text-gray-700 space-y-2">
                         <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>Hands-on research experience</li>
-                        <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>One-on-one faculty mentorship</li>
+                        <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>Faculty mentorship</li>
                         <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>Professional development workshops</li>
                         <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>Networking opportunities</li>
                         <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>Conference presentation opportunities</li>
@@ -215,7 +215,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Research Areas</h2>
-                <p class="text-xl text-gray-700">Explore cutting-edge research in advanced sensor technologies and cybersecurity</p>
+                <p class="text-xl text-gray-700">Explore research in advanced sensor technologies and cybersecurity</p>
             </div>
             
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
