--- a/research/index.html
+++ b/research/index.html
@@ -353,13 +353,13 @@
                     <h3 class="text-2xl font-bold text-fiu-navy mb-6">2021</h3>
                     <div class="space-y-4">
                         <div class="bg-white p-6 rounded-lg shadow-lg">
-                            <p class="text-gray-700">Alemany, Sheila, Jason Nucciarone, and Niki Pissinou. "Jespipe: A Plugin-Based, Open MPI Framework for Adversarial Machine Learning Analysis." <em>2021 IEEE International Conference on Big Data (Big Data)</em>. IEEE, 2021.</p>
+                            <p class="text-gray-700">Alemany, Sheila, Jason Nucciarone, and Niki Pissinou. <a href="https://ieeexplore.ieee.org/abstract/document/9671385" target="_blank" class="text-fiu-gold hover:text-fiu-navy hover:underline transition-colors">"Jespipe: A Plugin-Based, Open MPI Framework for Adversarial Machine Learning Analysis."</a> <em>2021 IEEE International Conference on Big Data (Big Data)</em>. IEEE, 2021.</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-lg">
-                            <p class="text-gray-700">Hyman, Meleik, Calvin Mark, Ahmed Imteaj, Hamed Ghiaie, Shabnam Rezapour, Arif M. Sadri, and M. Hadi Amini. "Data analytics to evaluate the impact of infectious disease on economy: Case study of COVID-19 pandemic." <em>Patterns</em> 2, no. 8 (2021): 100315.</p>
+                            <p class="text-gray-700">Hyman, Meleik, Calvin Mark, Ahmed Imteaj, Hamed Ghiaie, Shabnam Rezapour, Arif M. Sadri, and M. Hadi Amini. <a href="https://pubmed.ncbi.nlm.nih.gov/34337569/" target="_blank" class="text-fiu-gold hover:text-fiu-navy hover:underline transition-colors">"Data analytics to evaluate the impact of infectious disease on economy: Case study of COVID-19 pandemic."</a> <em>Patterns</em> 2, no. 8 (2021): 100315.</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-lg">
-                            <p class="text-gray-700">Imteaj, Ahmed, Raghad Alabagi, and M. Hadi Amini. "Exploiting Federated Learning Technique to Recognize Human Activities in Resource-Constrained Environment." <em>International Conference on Intelligent Human Computer Interaction</em>. Springer, Cham, 2021.</p>
+                            <p class="text-gray-700">Imteaj, Ahmed, Raghad Alabagi, and M. Hadi Amini. <a href="https://par.nsf.gov/servlets/purl/10315938" target="_blank" class="text-fiu-gold hover:text-fiu-navy hover:underline transition-colors">"Exploiting Federated Learning Technique to Recognize Human Activities in Resource-Constrained Environment."</a> <em>International Conference on Intelligent Human Computer Interaction</em>. Springer, Cham, 2021.</p>
                         </div>
                     </div>
                 </div>
@@ -369,7 +369,7 @@
                     <h3 class="text-2xl font-bold text-fiu-navy mb-6">2020</h3>
                     <div class="space-y-4">
                         <div class="bg-white p-6 rounded-lg shadow-lg">
-                            <p class="text-gray-700">Aleman, Concepcion Sanchez, Niki Pissinou, and Sheila Alemany. "Leontief-Based Data Cleaning Workload Distribution Strategy for EH-MWSN." <em>2020 IEEE International Workshop Technical Committee on Communications Quality and Reliability (CQR)</em>. IEEE, 2020.</p>
+                            <p class="text-gray-700">Aleman, Concepcion Sanchez, Niki Pissinou, and Sheila Alemany. <a href="https://ieeexplore.ieee.org/document/9101389" target="_blank" class="text-fiu-gold hover:text-fiu-navy hover:underline transition-colors">"Leontief-Based Data Cleaning Workload Distribution Strategy for EH-MWSN."</a> <em>2020 IEEE International Workshop Technical Committee on Communications Quality and Reliability (CQR)</em>. IEEE, 2020.</p>
                         </div>
                     </div>
                 </div>
@@ -379,7 +379,7 @@
                     <h3 class="text-2xl font-bold text-fiu-navy mb-6">2019</h3>
                     <div class="space-y-4">
                         <div class="bg-white p-6 rounded-lg shadow-lg">
-                            <p class="text-gray-700">Shahid, Abdur R., et al. "Sensor-chain: a lightweight scalable blockchain framework for internet of things." <em>2019 International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</em>. IEEE, 2019.</p>
+                            <p class="text-gray-700">Shahid, Abdur R., et al. <a href="https://ieeexplore.ieee.org/document/8875416" target="_blank" class="text-fiu-gold hover:text-fiu-navy hover:underline transition-colors">"Sensor-chain: a lightweight scalable blockchain framework for internet of things."</a> <em>2019 International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</em>. IEEE, 2019.</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-lg">
                             <p class="text-gray-700">Shahid, Abdur R., et al. "Towards the development of a differentially private lightweight and scalable blockchain for IoT." <em>2019 IEEE 16th International Conference on Mobile Ad Hoc and Sensor Systems Workshops (MASSW)</em>. IEEE, 2019.</p>
