--- a/alumni/index.html
+++ b/alumni/index.html
@@ -243,15 +243,15 @@
                 <div class="grid md:grid-cols-2 gap-6">
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Alejandro Jimenez Gerena</h4>
-                        <p class="text-sm text-gray-600 mb-1">University of Puerto Rico</p>
+                        <p class="text-sm text-gray-600 mb-1">Inter American University of Puerto Rico</p>
                         <p class="text-sm text-gray-700 mb-2">Secsplit llm</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: TBD</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Moreno Yaba</p>
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Bayden Hussien</h4>
-                        <p class="text-sm text-gray-600 mb-1">IDK</p>
+                        <p class="text-sm text-gray-600 mb-1">Tufts University</p>
                         <p class="text-sm text-gray-700 mb-2">Secsplit llm</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: TBD</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Moreno Yaba</p>
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Ben Abraham</h4>
