--- a/alumni/index.html
+++ b/alumni/index.html
@@ -227,7 +227,7 @@
             <div id="year-2025" class="year-content">
                 <div class="text-center mb-8">
                     <h3 class="text-2xl font-bold text-fiu-navy mb-2">Class of 2025</h3>
-                    <p class="text-gray-700">9 Alumni • 6 Universities • 3 Faculty Mentors</p>
+                    <p class="text-gray-700">9 Alumni • 7 Universities • 7 Faculty Mentors</p>
                 </div>
 
                 <!-- Group Photos -->
@@ -263,37 +263,37 @@
                         <h4 class="font-bold text-fiu-navy mb-1">Carlos Caros</h4>
                         <p class="text-sm text-gray-600 mb-1">Florida International University</p>
                         <p class="text-sm text-gray-700 mb-2">Implementing SLMs in Edge Devices for Self-Driving Vehicles</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Pissinou</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Pissinou, Dr. Luis Lago Enamorado and Alex Pissinou</p>
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Claudia Saleem</h4>
                         <p class="text-sm text-gray-600 mb-1">Florida International University</p>
                         <p class="text-sm text-gray-700 mb-2">Comparing small language models for real time on device decision support</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Nikki Pissinou</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Pissinou</p>
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Daniel Perera</h4>
                         <p class="text-sm text-gray-600 mb-1">University of Central Florida</p>
                         <p class="text-sm text-gray-700 mb-2">LLM generate synthetic samples on speech samples</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: TBD</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Poellabaur and Enshi Zhang</p>
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Meythri Lakkireddy</h4>
                         <p class="text-sm text-gray-600 mb-1">University of Texas at San Antonio</p>
                         <p class="text-sm text-gray-700 mb-2">LLM generate synthetic samples on speech samples</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: TBD</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Poellabaur and Enshi Zhang</p>
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Miguel Garcia</h4>
                         <p class="text-sm text-gray-600 mb-1">University of Texas</p>
                         <p class="text-sm text-gray-700 mb-2">Implementing SLMs in Edge Devices for Self-Driving Vehicles</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Pissinou</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Pissinou, Dr. Luis Lago Enamorado and Alex Pissinou</p>
                     </div>
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h4 class="font-bold text-fiu-navy mb-1">Moustafa Mohammed</h4>
                         <p class="text-sm text-gray-600 mb-1">George Washington University</p>
                         <p class="text-sm text-gray-700 mb-2">Comparing small language models for real time on device decision support</p>
-                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Nikki Pissinou</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Pissinou</p>
                     </div>
                 </div>
             </div>
